--- a/multiplicador_exemplo5/db/multiplicador.lpc.html
+++ b/multiplicador_exemplo5/db/multiplicador.lpc.html
@@ -32,6 +32,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >BOconnection|geraA1</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >BOconnection|geraAz</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -181,7 +197,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >6</TD>
+<TD >7</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -193,7 +209,7 @@
 </TR>
 <TR >
 <TD >BCconnection</TD>
-<TD >5</TD>
+<TD >6</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
